@@ -1,4 +1,6 @@
 
+Feb 25, 2009: libarchive 2.6.2 released
+
 Jan 18, 2009: libarchive 2.6.1 released
 
 Dec 28, 2008: libarchive 2.6.0 released
